--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "multiparty": "^4.1.3",
     "ng-file-upload": "^12.2.13",
     "ng-img-crop": "^0.2.0",
+    "ng-infinite-scroll": "^1.3.0",
     "passport": "~0.3.0",
     "passport-facebook": "^2.0.0",
     "passport-local": "^1.0.0",
