--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "connect-multiparty": "^2.0.0",
     "cookie-parser": "^1.3.5",
     "core-js": "^2.2.1",
+    "cors": "^2.5.1",
     "errorhandler": "^1.4.2",
     "express": "^4.13.3",
     "express-jwt": "^5.0.0",
@@ -42,6 +43,7 @@
     "ng-file-upload": "^12.2.13",
     "ng-img-crop": "^0.2.0",
     "ng-infinite-scroll": "^1.3.0",
+    "node-sass": "^3.13.1",
     "passport": "~0.3.0",
     "passport-facebook": "^2.0.0",
     "passport-local": "^1.0.0",
@@ -51,8 +53,7 @@
     "socket.io": "^1.3.5",
     "socket.io-client": "^1.3.5",
     "socketio-jwt": "^4.2.0",
-    "sprint-js": "~0.1.0",
-    "cors": "^2.5.1"
+    "sprint-js": "~0.1.0"
   },
   "devDependencies": {
     "angular-file-upload": "^2.4.1",
