--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "angular-animate": "~1.6.0",
     "angular-aria": "~1.6.0",
     "angular-cookies": "~1.6.0",
+    "angular-datepicker": "^1.0.5",
     "angular-file-upload": "^2.4.1",
+    "angular-moment": "^1.0.1",
     "angular-resource": "~1.6.0",
     "angular-sanitize": "~1.6.0",
     "angular-socket-io": "~0.7.0",
     "angular-ui-bootstrap": "^2.0.1",
     "angular-ui-router": "~0.3.1",
     "angular-validation-match": "^1.9.0",
+    "angularjs-datepicker": "^2.1.15",
     "babel-polyfill": "^6.7.2",
     "babel-runtime": "^6.6.1",
     "bluebird": "^3.3.3",
@@ -37,6 +40,8 @@
     "lodash": "^4.6.1",
     "lusca": "^1.3.0",
     "method-override": "^2.3.5",
+    "moment": "file:node_modules/moment",
+    "moment-timezone": "^0.5.11",
     "mongoose": "^4.1.2",
     "morgan": "~1.7.0",
     "multiparty": "^4.1.3",
@@ -53,7 +58,8 @@
     "socket.io": "^1.3.5",
     "socket.io-client": "^1.3.5",
     "socketio-jwt": "^4.2.0",
-    "sprint-js": "~0.1.0"
+    "sprint-js": "~0.1.0",
+    "sweetalert": "^1.1.3"
   },
   "devDependencies": {
     "angular-file-upload": "^2.4.1",
