--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "express-session": "^1.11.3",
     "fast-json-patch": "^1.0.0",
     "font-awesome": ">=4.1.0",
+    "jpegtran-bin": "^3.2.0",
     "jsonwebtoken": "^7.0.0",
     "lodash": "^4.6.1",
     "lusca": "^1.3.0",
@@ -49,6 +50,7 @@
     "ng-img-crop": "^0.2.0",
     "ng-infinite-scroll": "^1.3.0",
     "node-sass": "^3.13.1",
+    "optipng-bin": "^4.0.0",
     "passport": "~0.3.0",
     "passport-facebook": "^2.0.0",
     "passport-local": "^1.0.0",
